RESOLVED FIXED235076
ANGLE: ASTC-HDR is not available on TVOS
https://bugs.webkit.org/show_bug.cgi?id=235076
Summary ANGLE: ASTC-HDR is not available on TVOS
Kyle Piddington
Reported 2022-01-11 11:17:22 PST
ANGLE: ASTC-HDR is not available on TVOS
Attachments
Patch (11.80 KB, patch)
2022-01-11 11:30 PST, Kyle Piddington
no flags
Patch for landing (11.80 KB, patch)
2022-01-11 13:18 PST, Kyle Piddington
no flags
Kyle Piddington
Comment 1 2022-01-11 11:30:06 PST
EWS Watchlist
Comment 2 2022-01-11 11:31:02 PST
Note that there are important steps to take when updating ANGLE. See https://trac.webkit.org/wiki/UpdatingANGLE
Kyle Piddington
Comment 3 2022-01-11 13:18:53 PST
Created attachment 448873 [details] Patch for landing
EWS
Comment 4 2022-01-11 13:50:13 PST
Committed r287894 (245932@main): <https://commits.webkit.org/245932@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448873 [details].
Radar WebKit Bug Importer
Comment 5 2022-01-11 13:51:16 PST
Note You need to log in before you can comment on or make changes to this bug.